--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "tame4",
-  "version": "4.2",
+  "version": "4.3.0",
   "description": "TAME 4: TwinCAT ADS Made Easy",
-  "main": "tame-w-comments.js",
-  "directories": {
-    "doc": "docs"
-  },
+  "main": "tame.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tomcx/tame4.git"
   },
-  "keywords": ["ADS","Beckhoff","TwinCAT","PLC","TAME","TAME4"],
+  "keywords": ["ADS","Beckhoff","TwinCAT","PLC","TAME","TAME4", "ads", "beckhoff", "twincat", "plc", "tame", "tame4"],
   "author": "Thomas Schmidt <t.schmidt.p1@freenet.de>",
   "license": "(MIT or GPL-3.0)",
   "bugs": {
     "url": "https://github.com/tomcx/tame4/issues"
   },
-  "homepage": "http://tomcx.github.io/tame4/"
+  "homepage": "http://tomcx.github.io/tame4/",
+  "scripts": {
+    "test": "npm run lint",
+    "lint": "jshint tame.js"
+  },
+  "devDependencies": {
+    "jshint": "^2.8.0"
+  }
 }
